[package]
name = "onionRush"
version = "0.1.0"
edition = "2024"
authors = ["g0vguy <iilinux@proton.me>"]
license = "MIT"
description = "Parallel multi-circuit downloader over Tor"
homepage = "https://github.com/g0vguy/onionRush"
repository = "https://github.com/g0vguy/onionRush"
documentation = "https://github.com/g0vguy/onionRush/blob/main/README.md"
readme = "README.md"
keywords = ["tor", "download", "parallel", "anonymity", "socks5"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "onionRush"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["socks", "rustls-tls", "stream"] }
clap = { version = "~4.5", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
rand = "0.8"
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true